--- a/hibernate-tutorial/.classpath
+++ b/hibernate-tutorial/.classpath
@@ -16,6 +16,10 @@
 	<classpathentry kind="lib" path="lib/javassist-3.22.0-GA.jar"/>
 	<classpathentry kind="lib" path="lib/jboss-logging-3.3.1.Final.jar"/>
 	<classpathentry kind="lib" path="lib/jboss-transaction-api_1.2_spec-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.2-beta-bin.jar"/>
+	<classpathentry kind="lib" path="lib/javax.activation-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-api-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-core-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-impl-2.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.49.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
