--- a/mycoolapp/pom.xml
+++ b/mycoolapp/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>mycoolapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>mycoolapp</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Demo project for Spring 	Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -26,6 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<!-- ADD SUPPORT FOR AUTOMATIC RELOADING -->
+				<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 	</dependencies>
 
