--- a/mycoolapp/pom.xml
+++ b/mycoolapp/pom.xml
@@ -28,9 +28,14 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- ADD SUPPORT FOR AUTOMATIC RELOADING -->
-				<dependency>
+			<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		<!-- ADD SUPPORT FOR AUTOMATIC RELOADING -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 	</dependencies>
 
