Add values injected by @Value, and specified on applications.properties

--- a/mycoolapp/src/main/resources/application.properties
+++ b/mycoolapp/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 server.port=8181
 management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=info # to exclude route
 info.app.name=Aasas
 info.app.description=Crazy
+coach.name=Knuth
+team.name=apple
