--- a/mycoolapp/pom.xml
+++ b/mycoolapp/pom.xml
@@ -32,12 +32,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
-		<!-- ADD SUPPORT FOR AUTOMATIC RELOADING -->
+		<!-- ADD SUPPORT FOR ACTUATOR, WHICH ALOWS ENPOINTS, STATS AND  -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-				<dependency>
+		<!-- ADD SUPPORT FOR SPRING SECURITY -->
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
